<resources>
    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>
    <string name="category_title">全部分类</string>
    <string name="hot_title">人气榜</string>
    <string name="about">关于我们</string>
    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">帮你找到感兴趣的视频</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>
    <string name="cancel">取消</string>
    <string name="has_cancel">已取消</string>
    <string name="nickname">Xiho</string>
    <string name="view_homepage">查看个人主页 ></string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_cache">我的缓存</string>
    <string name="view_history">观看记录</string>
    <string name="feedback">意见反馈</string>
    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="splash_text">每日精选视频，让你大开眼界</string>
    <string name="copy_right_notice">内容部分数据归原公司《开眼Eyepetizer》版权所有</string>
    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
    <string name="since">copyright ©2017 Xiho.</string>
    <string name="gitHub">GitHub</string>
    <string name="welcome">欢迎使用AIPICK</string>
    <string name="base_ai">基于AI大数据的策略系统</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="regist">立即注册</string>
    <string name="mail_login">邮箱登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="search">搜索</string>
    <string name="mine_chose_area_code">选择手机号归属地</string>
    <string name="register">注册</string>
    <string name="phone_register">手机注册</string>
    <string name="email_register">邮箱注册</string>
    <string name="agree_register">同意并注册</string>
    <string name="verfyCode">验证码</string>
    <string name="get_verfycode">获取验证码</string>
    <string name="jiaoyiyuan">交易员</string>
    <string name="robot_caty">机器人策略</string>
    <string name="robot_trader">交易员</string>
    <string name="confirm">确定</string>
    <string name="robot_title">币安全币种数字货币三角套利机器人</string>
    <string name="robot_intro">Binance triangular arbitrage bot</string>
    <string name="fans">粉丝</string>
    <string name="renqi">人气</string>
    <string name="category_desc">策略详情</string>
    <string name="all_incoming">总收益率</string>
    <string name="follow_incoming">跟随者收益</string>
    <string name="subsciber_num">累计订阅次数</string>
    <string name="last_ten">近六个月收益率</string>
    <string name="jiaoyi_fenxi">交易分析</string>
    <string name="dingdan">订单</string>
    <string name="dingyuezhe">订阅者</string>
    <string name="incoming">收益</string>
    <string name="month">月</string>
    <string name="one_year">近一年</string>
    <string name="all_incoming1">总收益</string>
    <string name="month_incoming">月收益</string>
    <string name="yingkui">盈亏</string>
    <string name="jinyiyue">近一月</string>
    <string name="jin_sanyue">近三月</string>
    <string name="all">全部</string>
    <string name="jin_one_year">近一年</string>
    <string name="day">日</string>
    <string name="subsciber">订阅</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="yuepay">余额支付</string>
    <string name="pay">支付</string>
    <string name="set_follow">设置跟随方式</string>
    <string name="subsciber_intro">开启按钮，即确认跟随该策略下单交易 关闭按钮，即停止跟随下单，仍跟随平仓</string>
    <string name="guding_num">固定数量</string>
    <string name="guding_rate">固定比例</string>
    <string name="setting_follow_rate">例如您设置为%s倍比例跟随，交易员/机器人下单1个，你的下单为%s个</string>
    <string name="setting_follow_amount">您设置固定数量%s标准手，不论交易员/机器人下单多少标准手，您手数均为%s标准手</string>
    <string name="setting_num">您今日修改次数已用完</string>
    <string name="setting_tips">跟随可能存在点差、交易品种及开/休市时间的差异</string>
    <string name="zonghe_desc">综合详情</string>
    <string name="trend">24H涨跌/成交量</string>
    <string name="current_price">当前价</string>
    <string name="coin">名称</string>
    <string name="add_token">添加自选</string>
    <string name="one_day_amount">24H 量</string>
    <string name="search_token">请输入您想要的币种</string>
    <string name="search_history">历史搜索</string>
    <string name="clean_history">清除历史记录</string>
    <string name="clear_history">清除历史记录</string>
    <string name="buy">买</string>
    <string name="hight">高</string>
    <string name="vol">量</string>
    <string name="sell">卖</string>
    <string name="low">低</string>
    <string name="coin_jj">币种简介</string>
    <string name="person_center">个人中心</string>
    <string name="subsciber_desc">订阅详情</string>
    <string name="follow_record">跟随收益记录</string>
    <string name="guanzhu">关注</string>
    <string name="hasguanzhu">互相关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="monigensui">模拟\n跟随器</string>
    <string name="monicaopan">模拟\n操盘器</string>
    <string name="my_walet">我的\n钱包</string>
    <string name="my_walet_title">我的钱包</string>
    <string name="my_account">我的\n账户</string>
    <string name="invite_friend">邀请好友</string>
    <string name="mine_trader">交易员</string>
    <string name="mine_collect">收藏</string>
    <string name="mine_jiaoyisuo">交易所</string>
    <string name="mine_fade">消息反馈</string>
    <string name="tips_subscribe">恢复跟随下单，将第一时间为您\n同步下单信号</string>
    <string name="tips_subscribe_close">您将关闭跟随下单，关闭后仍跟随平仓，不再跟随下单。</string>
    <string name="tips">提示</string>
    <string name="tixian_record">提现记录</string>
    <string name="avaiable_amount">可提取金额</string>
    <string name="go_tiqu">去提取</string>
    <string name="leiji_shouyi">累计收益</string>
    <string name="mine_shouru">我的收入</string>
    <string name="suode_fencheng">所得分成</string>
    <string name="monicaopan1">模拟操盘</string>
    <string name="chushi_zijin">初始资金</string>
    <string name="mine_help">尽量详细地描述你遇到的问题，也欢迎对我们吐槽 你不爽的地方，我们将不断改进，感谢~</string>
    <string name="mine_help_feed">意见反馈</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="bind_coin_house">绑定交易所</string>
    <string name="add_coin_house">添加交易所</string>
    <string name="input_coin_hourse">请输入交易所名称</string>
    <string name="input_coin_hourse_address">请输入交易所地址</string>
    <string name="input_api">请输入API文档地址</string>
    <string name="amount_zichan">账户资产(USDT）</string>
    <string name="zhou_rate">周收益率</string>
    <string name="guzhi">估值(USDT)</string>
    <string name="zong_yingli_amount">总盈利金额</string>
    <string name="leiji_shouyi_rate">累计收益率</string>
    <string name="cate_tuijian">相关策略推荐</string>
    <string name="setting">设置</string>
    <string name="touxiang">头像</string>
    <string name="yonghuming">用户名</string>
    <string name="suozaidi">所在地</string>
    <string name="safe_center">安全中心</string>
    <string name="about_us">关于我们</string>
    <string name="clear_huancun">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="tixian_title">每日限提 ¥ %s，每单收取%s手续费。\n 提现申请时间：工作日，%s~%s。</string>
    <string name="tixian_yue">可提现余额 ¥ %s</string>
    <string name="trade_set_hint">订阅费设置（每周限修改1次）</string>
    <string name="not_bind_card">未绑定银行卡</string>
    <string name="tixian_amount">提现金额</string>
    <string name="all_tixian">全部提现</string>
    <string name="shouxufei">手续费</string>
    <string name="tixian">提现</string>
    <string name="tixian_apply">提现申请已提交</string>
    <string name="tixian_fuwufei">服务费</string>
    <string name="is_logot">是否退出登录?</string>
    <string name="current_version">当前版本号</string>
    <string name="mine_clear_pic_content">将清除所有图片及内容缓存</string>
    <string name="my_safe_center">安全中心</string>
    <string name="phone_num">手机号码</string>
    <string name="email">邮箱</string>
    <string name="login_pwd">登录密码</string>
    <string name="trade_pwd">交易密码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="please_input_verfycode">请输入验证码</string>
    <string name="modify_pwd">修改登录密码</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="please_input_new_pwd">请输入新密码（6–18位字母数字组合）</string>
    <string name="please_input_pwd_again">请输入再次确认</string>
    <string name="bank_card">银行卡</string>
    <string name="set_trade_pwd">设置交易密码</string>
    <string name="update_trade_pwd">修改交易密码</string>
    <string name="set_nick_name">设置用户名</string>
    <string name="please_input_trade_pwd">请输入交易密码（6位数的数字密码）</string>
    <string name="please_input_new_trade_pwd">请输入新交易密码（6位数的数字密码）</string>
    <string name="please_input_old_trade_pwd">请输入旧交易密码</string>
    <string name="apply_trader">申请交易员</string>
    <string name="apply_trader_tips">为了您的账户安全,请谨慎填写以下内容,资料提交后不可修改。</string>
    <string name="please_input_email">请输入邮箱地址</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="please_input_id_card">请输入证件号码</string>
    <string name="card_type">证件类型</string>
    <string name="card_msg">证件信息</string>
    <string name="card_youxiaoqi">证件必须在有效期内</string>
    <string name="trader_set">交易员设置</string>
    <string name="input_amount">请输入金额</string>
    <string name="trader_apply">申请交易员</string>
    <string name="apply_trader_desc">设置交易承诺“历史最大回撤率”，你的自律会赢得社区用户更多的信任；请谨慎填写，一经确认将不可修改，建议≤30%</string>
    <string name="input_apply_msg">请输入1-99正整数</string>
    <string name="net_work_error">检查网络是否连接</string>
    <string name="connect_server_timeout">无法连接到服务器</string>
    <string name="parse_data_error">解析数据出现错误</string>
    <string name="connect_error">未连接到服务器</string>
    <string name="on_server_error">服务器开小差了，请连接重试</string>
    <string name="mine_send_success">发送成功</string>
    <string name="regist_success">注册成功</string>
    <string name="putong_role">普通用户</string>
    <string name="jiqiren">机器人</string>
    <string name="tiquing">提取中</string>
    <string name="yitiqu">已提取</string>
    <string name="send">发送</string>
    <string name="mine_help_contact">手机号码/邮箱/QQ都行，方便我们联系你</string>
    <string name="edit">编辑</string>
    <string name="delete_all">全部删除</string>
    <string name="delete">删除</string>
    <string name="unbind">未绑定</string>
    <string name="not_setting">未设置</string>
    <string name="has_bind">已绑定</string>
    <string name="bind_miyao_desc">绑定 API 即可统计您在 Binance 使用策略的资产收益情况</string>
    <string name="input_apikey">请输入 ApiKey</string>
    <string name="input_secretKey">请输入 SecretKey</string>
    <string name="input_passphrase">请输入 Passphrase (创建API时设置的密码)</string>
    <string name="text_time">时间</string>
    <string name="text_direction">方向</string>
    <string name="text_price">价格</string>
    <string name="text_amount">数量</string>
    <string name="one_min">1分</string>
    <string name="five_min">5分</string>
    <string name="thirty_min">30分</string>
    <string name="week_line">周线</string>
    <string name="categry_tedian">策略特点</string>
    <string name="categry_tedian_desc">原理是三角对冲，资料很多，可自行搜索。对冲所有可能的三角交易对，包括所有以BTC、USDT、ETH、USDS、TUSD、PAX、XRP、USDC等基础货币定价的交易对，目前共检查610条三角对冲路径。频率高，使用websocket推送行情和成交数据账户信息等，成交自动推送微信。动态撤单挂单机制，根据对冲机会自动判断下单大小，基本不会因超出限制被封API。策略每日自动更新交易信息，将新增的对冲路径加入。策略图表信息详尽，对冲量、持有价值、对冲空间等信息一目了然。自动平衡基础货币。采用被动挂单机制，增加成交几率，降低手续费，但增加了持币风险。（目前立即成交模式的三角对冲很难有机会）策略运行时间长，不断改进，稳定性好。</string>
    <string name="categry_shouyi">策略收益</string>
    <string name="categry_shouyi_desc">由于对冲容量有限，使用2个比特币左右即可，去年和年初稳定10-20%每月。现在由于竞争激烈，几乎很难有收益，有行情波动大时还可以。主要供学习。</string>
    <string name="categry_fengxian">策略风险</string>
    <string name="categry_fengxian_desc">持基础货币风险，需要持有一定量的基础货币。持山寨币风险，由于挂单模式，会持有一段时间，但山寨币有涨有跌，最近山寨币指数一个多月从420多点反弹到500多点。山寨币指数实盘公开地址：https://www.fmz.com/robot/74076，行情剧烈波动风险，可能会被动接盘，可控制具体山寨币的总持有量。山寨币下架风险。</string>
</resources>