<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:gravity="center_vertical"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_time"
        android:textColor="@color/text_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_direct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_direction"
        android:textColor="@color/text_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_price"
        android:textColor="@color/text_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_amount"
        android:textColor="@color/text_hint"
        android:textSize="12sp" />
</LinearLayout>