<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ai_loginbg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textColor="@color/color_white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/base_ai"
        android:textColor="@color/color_white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <LinearLayout

            android:id="@+id/ll_area"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/mTvAreaCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textColor="@color/color_white"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_bottom" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            android:visibility="gone" />


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:background="@null"
            android:hint="@string/please_input_phone"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_color_edit_hint"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textColor="@color/color_white"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:background="@null"
            android:hint="@string/please_input_pwd"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_color_edit_hint"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_white" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="@color/color_white"
        android:textSize="17sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/regist"
            android:textColor="@color/color_white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_login_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mail_login"
            android:textColor="@color/color_white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forget_pwd"
            android:textColor="@color/color_white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>