<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:layout_above="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:orientation="vertical"
    android:paddingTop="20dp"
    >
    <include
        android:id="@+id/mToolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/robot_title"
            android:textColor="@color/color_white"
            android:textSize="17sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robot_intro"
            android:textColor="@color/color_white"
            android:textSize="10sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="15dp"
            android:background="@color/bg_common"
            android:layout_marginTop="23dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_title"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categry_tedian"
                android:textSize="18sp"
                android:textColor="@color/color_home"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categry_tedian_desc"
                android:textSize="14sp"
                android:textColor="@color/color_home"
                />

            <TextView

                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categry_shouyi"
                android:textSize="18sp"
                android:textColor="@color/color_home"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categry_shouyi_desc"
                android:textSize="14sp"
                android:textColor="@color/color_home"
                />
            <TextView

                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categry_fengxian"
                android:textSize="18sp"
                android:textColor="@color/color_home"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categry_fengxian_desc"
                android:textSize="14sp"
                android:textColor="@color/color_home"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#1E2742"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="免费"
            android:textColor="#F0BC33"
            android:textSize="19sp" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_toRightOf="@+id/tv_price"-->
        <!--android:text="/月"-->
        <!--android:textColor="#90ffffff"-->
        <!--android:textSize="12sp" />-->

        <TextView

            android:id="@+id/tv_suscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/robot_bt_bg"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/subsciber"
            android:textColor="@color/color_white"
            android:textSize="15sp" />

    </RelativeLayout>


</RelativeLayout>