<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAE9F0">

        <TextView
            android:id="@+id/mTvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/dilaog_btn_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Binance"
            android:textColor="#6371A0"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mTvConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/confirm"
            android:textColor="@color/dilaog_btn_color"
            android:textSize="15sp" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/bind_miyao_desc"
        android:textColor="#6371A0"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_coin_house_bg"
        android:gravity="left|top"
        android:hint="@string/input_apikey"
        android:padding="10dp"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_coin_house_bg"
        android:gravity="left|top"
        android:hint="@string/input_secretKey"
        android:padding="10dp"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_coin_house_bg"
        android:gravity="left|top"
        android:hint="@string/input_passphrase"
        android:padding="10dp"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="API 获取方法：登录 Binance 交易平台官网，在个人中心服务中获取。"
        android:textColor="#ff6371a0"
        android:textSize="12sp" />


</LinearLayout>